Base character class

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -186,3 +186,7 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/StartupMap.StartupMap
+GameDefaultMap=/Game/StartupMap.StartupMap
+
