--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -189,4 +189,5 @@ ManualIPAddress=
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/StartupMap.StartupMap
 GameDefaultMap=/Game/StartupMap.StartupMap
+ServerDefaultMap=/Game/Maps/StartupMap.StartupMap
 
